[feat] order, catalog service add

--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
   
 spring:
   application:
-    name: user-service
+    name: catalog-service
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:~/test;AUTO_SERVER=TRUE
@@ -21,6 +21,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
+    generate-ddl: true
+    database: h2
+    defer-datasource-initialization: true
 
 eureka:
   instance:
@@ -31,5 +35,6 @@ eureka:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka
 
-greeting:
-  message: Welcome to the simple E-commerce;
+logging:
+  level:
+    com.sdc: DEBUG
