--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -19,13 +19,22 @@ spring:
         uri: lb://USER-SERVICE
         predicates:
         - Path=/user-service/**
-      - id: first-service
-        uri: http://localhost:8081/first-service/**
+      - id: catalog-service
+        uri: lb://CATALOG-SERVICE
         predicates:
-        - Path=/first-service/**
-      - id: second-service
-        uri: http://localhost:8082/second-service/**
+        - Path=/catalog-service/**
+      - id: order-service
+        uri: lb://ORDER-SERVICE
         predicates:
-        - Path=/second-service/** 
+        - Path=/order-service/**
+        
+#      - id: first-service
+#        uri: http://localhost:8081/first-service/**
+#        predicates:
+#        - Path=/first-service/**
+#      - id: second-service
+#        uri: http://localhost:8082/second-service/**
+#        predicates:
+#        - Path=/second-service/** 
   
     
