--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -33,3 +33,11 @@ eureka:
 
 greeting:
   message: Welcome to the simple E-commerce;
+  
+logging:
+  level:
+    com: debug
+
+token:
+  expiration_time: 86400000
+  secret: user_token
