--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -15,10 +15,39 @@ spring:
   cloud:
     gateway:
       routes:
+#      - id: user-service
+#        uri: lb://USER-SERVICE
+#        predicates:
+#        - Path=/user-service/**
+        
       - id: user-service
         uri: lb://USER-SERVICE
         predicates:
-        - Path=/user-service/**
+          - Path=/user-service/**
+#          - Method=POST
+        filters:
+        - RemoveRequestHeader=Cookie
+        - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+
+#      - id: user-service
+#        uri: lb://USER-SERVICE
+#        predicates:
+#          - Path=/user-service/users
+#          - Method=POST
+#        filters:
+#          - RemoveRequestHeader=Cookie
+#          - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+#
+#      - id: user-service
+#        uri: lb://USER-SERVICE
+#        predicates:
+#          - Path=/user-service/**
+#          - Method=GET
+#        filters:
+#          - RemoveRequestHeader=Cookie
+#          - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+#        # 앞에 있는 url 형태로 들어올 경우 뒤의 형태로 변경.
+        
       - id: catalog-service
         uri: lb://CATALOG-SERVICE
         predicates:
