--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -26,8 +26,9 @@ spring:
           - Path=/user-service/**
 #          - Method=POST
         filters:
-        - RemoveRequestHeader=Cookie
-        - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+          - RemoveRequestHeader=Cookie
+          # RewritePath는 user-service라는 것으로 요청할 때 앞의 url로 호출되었을 경우 뒤의 url로 변경.
+          - RewritePath=/user-service/(?<segment>.*), /$\{segment}
 
 #      - id: user-service
 #        uri: lb://USER-SERVICE
@@ -51,11 +52,11 @@ spring:
       - id: catalog-service
         uri: lb://CATALOG-SERVICE
         predicates:
-        - Path=/catalog-service/**
+          - Path=/catalog-service/**
       - id: order-service
         uri: lb://ORDER-SERVICE
         predicates:
-        - Path=/order-service/**
+          - Path=/order-service/**
         
 #      - id: first-service
 #        uri: http://localhost:8081/first-service/**
