--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -38,6 +38,13 @@ logging:
   level:
     com: debug
 
-token:
-  expiration_time: 86400000
-  secret: user_token
+
+#token:
+#  expiration_time: 86400000
+#  secret: user_token
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
+
